--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "express": "^5.2.1",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@tsconfig/node23": "^23.0.4",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
